# python-project-52

./: .gitignore  MANIFEST.in  Makefile  README.md  build.sh  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.github/workflows/: sonarcloud.yml
core/: views.py
labels/: admin.py  apps.py  forms.py  models.py  test_labels.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: admin.py  forms.py  models.py  test_statuses.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: .gitignore  auth_views.py  settings.py  urls.py  wsgi.py
task_manager/common/: views.py
tasks/: filters.py  forms.py  models.py  test_task_filters.py  test_tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
templates/: base.html  index.html
templates/labels/: label_confirm_delete.html  label_form.html  label_list.html  label_update.html
templates/registration/: login.html
templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html  status_update.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_update.html
templates/users/: placeholder.html  user_confirm_delete.html  user_form.html  user_list.html  user_update.html
users/: admin.py  forms.py  models.py  test_users.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/templatetags/: user_extras.py
