[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager (Hexlet)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=5.2.9",
    "django-bootstrap5>=26.1",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "task_manager*",
    "core*",
    "users*",
    "statuses*",
    "tasks*",
    "labels*",
]
exclude = [
    "templates*",
    "staticfiles*",
    "media*",
    "tests*",
]

[tool.setuptools.package-data]
# Keep this for future-proofing if templates/static ever move inside packages.
"task_manager" = ["templates/**/*"]
"core" = ["templates/**/*"]
"users" = ["templates/**/*"]
"statuses" = ["templates/**/*"]
"tasks" = ["templates/**/*"]
"labels" = ["templates/**/*"]
